<resources>
    <string name="app_name">SimpleToDo</string>
    <string name="add">Add</string>
    <string name="add_a_task">Add a task</string>
    <string name="back">Back</string>
    <string name="edit_task_name">Edit Task Name</string>
    <string name="date_due">Date Due</string>
    <string name="done">Done</string>
    <string name="select_date">Select Date</string>
    <string name="task_description">Task description</string>
    <string name="description">Description:</string>
</resources>