<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/addTaskField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/addTaskField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/add_a_task"
        app:layout_constraintBottom_toTopOf="@+id/taskDescField"
        app:layout_constraintEnd_toStartOf="@+id/dateBtn"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints=""
        android:inputType="textNoSuggestions" />

    <ImageButton
        android:id="@+id/dateBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/taskDescField"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:layout_constraintStart_toEndOf="@+id/addTaskField"
        app:layout_constraintEnd_toStartOf="@+id/button"
        android:src="@drawable/ic_baseline_calendar_today_24"
        android:contentDescription="@string/select_date" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/taskDescField"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/taskDescField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/task_description"
        app:layout_constraintTop_toBottomOf="@+id/dateBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints=""
        android:inputType="textNoSuggestions" />
</androidx.constraintlayout.widget.ConstraintLayout>